syntax = "proto3";

package proto;

option java_package = "com.proto.transmitter";
option java_multiple_files = true;

message Transmitter{
  double glucoseLevel = 1;
}

message TransmitterRequest{
  Transmitter request =1;
}

message TransmitterResponse{
  double result = 1;
}

service TransmitterService{
  //Unary
  rpc Transmitter(TransmitterRequest) returns(TransmitterResponse) {};

  //BiDi streaming
  rpc BloodLevelTransmitter(stream TransmitterRequest) returns(stream TransmitterResponse){};
}