syntax = "proto3";

package proto;

option java_package = "com.proto.watchApp";
option java_multiple_files = true;

message WatchApp{
  double glucoseLevel = 1;
}

message AverageRequest{
  WatchApp request = 1;
}

message AnalysisResponse{
  string result = 1;
}

service WatchService{
  //Server-side Streaming
  rpc App(AverageRequest) returns(stream AnalysisResponse) {};
}